test_scripts/errors/struct_no_such_method.shm
struct Foo { x }
let f = Foo(1);
f.nonexistent();
